Home url redirect

--- a/layouts/partials/baseof/header.html
+++ b/layouts/partials/baseof/header.html
@@ -1,7 +1,7 @@
 <header id="header">
     <div class="container">
 
-        <div class="logo"><a href="{{ .Site.Params.home }}" target="_blank">{{.Site.Title}}<a></div>
+        <div class="logo"><a href="{{ .Site.Params.home }}">{{.Site.Title}}<a></div>
 
         <nav class="menu">
             {{ $current := . }}
