Headline to research page

--- a/layouts/partials/common/headline.html
+++ b/layouts/partials/common/headline.html
@@ -8,7 +8,7 @@
         
             <div class="headline">
 
-                <a href="{{ .Permalink }}">{{ .Params.title }}</a>
+                <a href="{{ .Site.Params.research }}">{{ .Params.title }}</a>
                 <p>{{ .Summary }}</p>
 
             </div>
