Add Body min-width to avoid header overflow

--- a/assets/sass/local/layouts/_baseof.scss
+++ b/assets/sass/local/layouts/_baseof.scss
@@ -6,6 +6,7 @@ body {
     background-color: $grey-100;
 
     min-height: 100%;
+    min-width: 390px;
 
     display: flex;
     flex-direction: column;
