--- a/assets/sass/local/layouts/_baseof.scss
+++ b/assets/sass/local/layouts/_baseof.scss
@@ -6,7 +6,7 @@ body {
     background-color: $grey-100;
 
     min-height: 100%;
-    min-width: 375px;
+    min-width: 100%;
 
     display: flex;
     flex-direction: column;
