[head] Add math katex

--- a/layouts/partials/baseof/head.html
+++ b/layouts/partials/baseof/head.html
@@ -21,3 +21,6 @@
 {{ $sass := resources.Get "sass/main.scss" }}
 {{ $style := $sass | resources.ToCSS (dict "targetPath" "css/main.css" ) }}
 <link rel="stylesheet" type="text/css" media="screen" href="{{ $style.Permalink }}">
+
+<!-- Math -->
+{{ if .Params.math }}{{ partial "common/katex.html" . }}{{ end }}
